Fix Z-index bug

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
 		left: 0px;
 		width: 100%;
 		height: 100%;
+		z-index: 3;
 	}
 
 	#welcome div {
